<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_trackbus"
            android:icon="@drawable/ic_tracker"
            android:title="@string/menu_track_bus" />

        <item
            android:id="@+id/nav_send_message"
            android:icon="@drawable/ic_feedback"
            android:title= "Send Message" />

        <item
            android:id="@+id/inbox"
            android:icon="@drawable/ic_feedback"
            android:title= "Inbox" />


        <item
            android:id="@+id/outbox"
            android:icon="@drawable/ic_feedback"
            android:title= "OutBox" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_feedback"
            android:title="@string/menu_rate_feedback" />

        <item
            android:id="@+id/mapsFragment"
            android:icon="@drawable/ic_feedback"
            android:title="@string/menu_track_bus" />

        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_feedback"
            android:title="Logout" />

    </group>
</menu>