<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_trackbus">

    <fragment
        android:id="@+id/nav_trackbus"
        android:name="com.project.SchoolBusApp.ui.track_bus.TrackBusFragment"
        android:label="@string/menu_track_bus"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.project.SchoolBusApp.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_trackbus" />

    <fragment
        android:id="@+id/nav_feedback"
        android:name="com.project.SchoolBusApp.ui.feedback.FeedBackFragment"
        android:label="@string/menu_rate_feedback"
        tools:layout="@layout/fragment_feedback" />

    <fragment
        android:id="@+id/nav_send_message"
        android:name="com.project.SchoolBusApp.SendMessage"
        android:label="Send Message"
        tools:layout="@layout/fragment_send_message" />
    <fragment
        android:id="@+id/outbox"
        android:name="com.project.SchoolBusApp.Outbox"
        android:label="Outbox"
        tools:layout="@layout/fragment_outbox" />
    <fragment
        android:id="@+id/inbox"
        android:name="com.project.SchoolBusApp.Inbox"
        android:label="inbox"
        tools:layout="@layout/fragment_inbox" />
</navigation>